--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
               <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item align-self-center p-2">
-              <a href="" class="btn btn-secondary px-4">
+              <a href="" class="btn btn-secondary btn-block">
                 Sign In
               </a>
             </li>
             <li class="nav-item align-self-center">
-              <a href="" class="btn btn-primary px-4">
+              <a href="" class="btn btn-primary btn-block">
                 Sign Up
               </a>
             </li>
