--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
         </div>
       </div>
     </section>
-
+    <footer>
+      <div class="row mt-2">
+        <div class="col-12">
+          <center>
+            Copyright &copy; 2021
+          </center>
+        </div>
+      </div>
+    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
