--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
       </div>
     </section>
     <footer>
-      <div class="row mt-2">
-        <div class="col-12">
-          <center>
-            Copyright &copy; 2021
-          </center>
+      <div class="container">
+        <div class="row mt-2">
+          <div class="col-12">
+            <center>
+              Copyright &copy; 2021
+            </center>
+          </div>
         </div>
       </div>
     </footer>
